DOM Range: surroundContents() should not check if newParent is in ancestors beforehand.

https://dom.spec.whatwg.org/#dom-range-surroundcontents
According to the DOM standard, we should not check it before starting DOM
mutation. Step 5 throws HierarchyRequestError instead.

This CL fixes 44 tests in wpt/dom/ranges/Range-surroundContents.html.

* images/element-gcd-while-generating-alt-content.html: Removed.
  This CL changes behavior of the test. The test was for a crash bug in
  pre-Olilpan era, and we don't have code for the crash fix any longer.

* fast/dom/Range/surroundContents-1.html: Removed.
  This is a pixel test to verify HierarchyRequestError which this CL removes.
  This behavior is tested well in WPT.

* shadow-dom/range-surround-contents.html: Updated
  DOM trees are modified because this CL removes a precondition check.

BUG=699861

Review-Url: https://codereview.chromium.org/2745443003
Cr-Commit-Position: refs/heads/master@{#455941}

Former-commit-id: a3c94e4cc81caa2693ee56579e74c71e2fcadb0f